# RzhavaRender

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/app/: Application.hpp
include/console/: Message.hpp
include/glad/: glad.h
include/gui/: Gui.hpp  GuiLayout.hpp
include/gui/panels/: GizmoPanel.hpp  InspectorPanel.hpp  ScenePanel.hpp
include/input/: InputHandler.hpp
include/render/: ViewportRenderer.hpp
include/render/gizmo/: Gizmo.hpp  GizmoRenderer.hpp  IGizmoStrategy.hpp  RotationGizmoStrategy.hpp  ScaleGizmoStratgy.hpp  TranslationGizmoStrategy.hpp
include/scene/: Scene.hpp
include/scene/camera/: Camera.hpp
include/scene/commands/: CommandId.hpp  MouseInteraction.hpp  MouseInteractions.hpp  SetGizmoCommand.hpp  Shortcuts.hpp
include/scene/selection/: SelectionManager.hpp
include/scene/shapes/: Round.hpp  Shape.hpp  Triangle.hpp
include/viewport/: Go3d.hpp  GridAxis.hpp  Viewport.hpp
src/: glad.c  main.cpp
src/app/: Application.cpp
src/console/: Message.cpp
src/gui/: Gui.cpp
src/gui/panels/: AddShapePopup.cpp  GizmoPanel.cpp  InspectorPanel.cpp  MenuBarPanel.cpp  ScenePanel.cpp  ToolbarPanel.cpp  ViewportPanel.cpp
src/input/: InputHandler.cpp
src/render/: ViewportRenderer.cpp
src/render/gizmo/: Gizmo.cpp  GizmoRenderer.cpp  RotationGizmoStrategy.cpp  ScaleGizmoStrategy.cpp  TranslationGizmoStrategy.cpp
src/scene/: Scene.cpp
src/scene/camera/: Camera.cpp
src/scene/commands/: MouseInteractions.cpp  SetGizmoCommand.cpp  Shortcuts.cpp
src/viewport/: Go3D.cpp  GridAxis.cpp  Viewport.cpp
(+21 files in other folders)
